edit for html and css

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 </head>
 <body>
     <header>
-        <h1>Kalkulator Hitung Persegi</h1>
+        <h1 class="header-logo">Katik</h1>
+        <h4 class="header-logo2">Kalkulator Matematik</h3>
     </header>
+    <main>
+        <h2 class="Welcome">Welcome to Katik</h2>
+        <p>Hai Sobat, Selamat datang di Katik</p>
+        <p>Sebuah web apps sederhana yang berfungsi untuk menghitung nilai luas dan keliling bangun datar</p>
     <section class="LuasinputSection">
         <label for="inputField">Sisi Persegi</label>
         <input type="number" id="inputField" placeholder="Masukkan Sisi">
@@ -18,6 +23,7 @@
         <button class="hitungButton">Hitung</button>
         <button>Reset</button>
     </section>
+    </main>
 </body>
 </html>
 <!-- COBA KOMEN DEH DISINI -->
