menambahkan section persegi dan p. panjang dan script js

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <h2 class="Welcome">Welcome to Katik</h2>
         <p>Hai Sobat, Selamat datang di Katik</p>
         <p>Sebuah web apps sederhana yang berfungsi untuk menghitung nilai luas dan keliling bangun datar</p>
+    <section class="button-persegi" onclick="switchPersegi()">Persegi</section>
+    <section class="button-persegi-panjang">Persegi Panjang</section>
     <section class="LuasinputSection">
         <label for="inputField">Sisi Persegi</label>
         <input type="number" id="inputField" placeholder="Masukkan Sisi">
@@ -24,6 +26,7 @@
         <button>Reset</button>
     </section>
     </main>
+    <script src="js/script.js"></script>
 </body>
 </html>
 <!-- COBA KOMEN DEH DISINI -->
