Upload script js + edit final

--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
         <p>Sebuah web apps sederhana yang berfungsi untuk menghitung nilai luas dan keliling bangun datar</p>
     <section class="button-persegi" onclick="switchPersegi()">Persegi</section>
     <section class="button-persegi-panjang">Persegi Panjang</section>
+    <section class="Luas">Luas Persegi</section>
     <section class="LuasinputSection">
         <label for="inputField">Sisi Persegi</label>
         <input type="number" id="inputField" placeholder="Masukkan Sisi">
     </section>
     <section class="inputButtonSection">
-        <button class="hitungButton">Hitung</button>
+        <button id="hitungButton">Hitung</button>
         <button>Reset</button>
     </section>
     </main>
